[gd_scene load_steps=5 format=2]

[ext_resource path="res://resorces/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://scripts/g_nades.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5851, 6.31371 )

[sub_resource type="CircleShape2D" id=2]
radius = 29.6814

[node name="g_nades" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 992

[node name="blast" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="blast"]
shape = SubResource( 2 )

[node name="explotion" type="Sprite" parent="."]
position = Vector2( 0.315348, -5.7146e-06 )
scale = Vector2( 3.96942, 3.96942 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 134

[node name="ex_timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="end_timer" type="Timer" parent="." groups=[
"g-nade",
]]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="blast" to="." method="_on_blast_body_entered"]
[connection signal="timeout" from="ex_timer" to="." method="_on_ex_timer_timeout"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]
